--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=8089
+server.port=8090
+management.security.enabled=false
+logging.level.root=INFO
+#logging.level.org.springframework=debug
+spring.jackson.serialization.write-date-keys-as-timestamps=false
+spring.messages.basename=messages
